src/app/modules/ui-elements/folder-tree/folder-tree.component.scss
:host {
  font-size: var(--font-size-secondary);
  font-weight: var(--font-weight-secondary);
}
.item:hover:not(:has(.item:hover)) {
  background-color: var(--bluegray-900);
  border: 1px solid var(--accent-color);
  cursor: pointer;
}
ul {
  list-style-type: none;
  padding: 0;
}

